feat:login register page template and style

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,5 @@
 <%- include(`./partials/root/head`) %>
 
-<link rel="stylesheet" type="text/css" href="/styles/careers.css">
-
 <%- include(`./partials/root/head-end`) %>
 
 <%- include(`./partials/root/header`) %>
@@ -15,43 +13,7 @@
     	</div>
 </div>
       
-    
-
-
-      <main class="gridothers">
-        <article>
-            <a href="commonnumber.html">
-          <img src="images/commonnumber.jpg" alt="Sample photo" >
-        </a>
-        </article>
-        <article>
-            <a href="analytics.html">
-          <img src="images/analytics.jpg" alt="Sample photo">
-        </a>
-        </article>
-        <article>
-            <a href="predicttarget.html">
-          <img src="images/predictedcounter.jpg" alt="Sample photo">
-        </a>
-        </article>
-        <article>
-            <a href="previousresult.html">
-          <img src="images/previousresults.jpg" alt="Sample photo">
-        </a>
-        </article>
-        <article>
-            <a href="teercalendar.html">
-          <img src="images/teercalendar.jpg" alt="Sample photo">
-        </a>
-        </article>
-        <article>
-            <a href="reputedcounters.html">
-          <img src="images/reputedcounter.jpg" alt="Sample photo">
-        </a>
-        </article>
-    
-    </main>
-
+    <%- include(`./partials/root/elements/projectCard`) %>
 
     <%- include(`./partials/root/footer`) %>
 
