--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -1,8 +1,6 @@
 
 <%- include(`./partials/root/head`) %>
 
-<!-- <link rel="stylesheet" type="text/css" href="/styles/careers.css"> -->
-
 <%- include(`./partials/root/head-end`) %>
 
 <%- include(`./partials/root/header`) %>
@@ -24,53 +22,9 @@
       </tr>
     
     </table>
-    <main class="grid">
-      <article>
-          <a href="commonnumber.html">
-        <img src="/images/commonnumber.jpg" alt="Sample photo" >
-      </a>
-      </article>
-      <article>
-          <a href="#">
-        <img src="/images/teerbhutansocial.jpg" alt="Sample photo">
-      </a>
-      </article>
-      <article>
-          <a href="dreamnumber.html" >
-        <img src="/images/dreamnumber.jpg" alt="Sample photo">
-      </a>
-      </article>
-      <article>
-          <a href="analytics.html">
-        <img src="images/analytics.jpg" alt="Sample photo">
-      </a>
-      </article>
-      <article>
-          <a href="predicttarget.html">
-        <img src="images/predictedcounter.jpg" alt="Sample photo">
-      </a>
-      </article>
-      <article>
-          <a href="previousresult.html">
-        <img src="images/previousresults.jpg" alt="Sample photo">
-      </a>
-      </article>
-      <article>
-          <a href="teercalendar.html">
-        <img src="images/teercalendar.jpg" alt="Sample photo">
-      </a>
-      </article>
-      <article>
-          <a href="reputedcounters.html">
-        <img src="images/reputedcounter.jpg" alt="Sample photo">
-      </a>
-      </article>
-      <article>
-          <a href="champions.html">
-        <img src="images/champions.jpg" alt="Sample photo">
-      </a>
-      </article>
-    </main>
+
+    <%- include(`./partials/root/elements/projectCard`) %>
+    
     </div>
     
     </main>
