--- a/views/partials/root/header.ejs
+++ b/views/partials/root/header.ejs
@@ -1,9 +1,10 @@
-<header>
 
     <nav class="navbar navbar-light bg-info">
       <a class="navbar-brand" href="mainteer.html">
-        <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="Logo">
+        <img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="Logo">
         Online Bhutan Result
       </a>
     </nav>
-    </header>
+</header>
+
+<%- include(`./message`) %>
