--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -10,8 +10,8 @@
 
     <h1>Login to Bhutan Teer</h1>
 
-    <form method="post" action="">
-      <p><input type="text" name="login" value="" placeholder="Enter your Email"></p>
+    <form method="post" action="/admin/login">
+      <p><input type="email" name="email" value="" placeholder="Enter your Email"></p>
       <p><input type="password" name="password" value="" placeholder="Enter your Password"></p>
       </p>
       <p class="submit"><input type="submit" name="commit" value="Login"></p>
