--- a/views/partials/root/header.ejs
+++ b/views/partials/root/header.ejs
@@ -1,6 +1,6 @@
 
     <nav class="navbar navbar-light bg-info">
-      <a class="navbar-brand" href="mainteer.html">
+      <a class="navbar-brand" href="/">
         <img src="/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="Logo">
         Online Bhutan Result
       </a>
