feat:dreamnumber section done

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -61,7 +61,7 @@
 
     <main class="grid">
         <article>
-            <a href="commonnumber.html">
+            <a href="/commonnumber">
           <img src="/images/commonnumber.jpg" alt="Sample photo" >
         </a>
         </article>
