--- a/views/partials/root/elements/projectCard.ejs
+++ b/views/partials/root/elements/projectCard.ejs
@@ -1,6 +1,6 @@
 <main class="gridothers">
 <article>
-    <a href="commonnumber.html">
+    <a href="/commonnumber">
   <img src="/images/commonnumber.jpg" alt="Sample photo" >
 </a>
 </article>
