feat:predict target section done

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -71,7 +71,7 @@
         </a>
         </article>
         <article>
-            <a href="dreamnumber.html" >
+            <a href="/dreamnumber" >
           <img src="/images/dreamnumber.jpg" alt="Sample photo">
         </a>
         </article>
@@ -91,17 +91,17 @@
         </a>
         </article>
         <article>
-            <a href="teercalendar.html">
+            <a href="/teercalender">
           <img src="/images/teercalendar.jpg" alt="Sample photo">
         </a>
         </article>
         <article>
-            <a href="reputedcounters.html">
+            <a href="/reputedcounter">
           <img src="/images/reputedcounter.jpg" alt="Sample photo">
         </a>
         </article>
         <article>
-            <a href="champions.html">
+            <a href="/teerchampion">
           <img src="/images/champions.jpg" alt="Sample photo">
         </a>
         </article>
