--- a/views/partials/root/elements/projectCard.ejs
+++ b/views/partials/root/elements/projectCard.ejs
@@ -20,12 +20,12 @@
 </a>
 </article>
 <article>
-    <a href="teercalendar.html">
+    <a href="/teercalender">
   <img src="/images/teercalendar.jpg" alt="Sample photo">
 </a>
 </article>
 <article>
-    <a href="reputedcounters.html">
+    <a href="/reputedcounter">
   <img src="/images/reputedcounter.jpg" alt="Sample photo">
 </a>
 </article>
