--- a/views/predictTarget/addPredictTarget.ejs
+++ b/views/predictTarget/addPredictTarget.ejs
@@ -8,10 +8,9 @@
 
 <div class="register">
 
-    <h1>Add  Reputed Counter</h1>
-    <form method="POST" action="/reputedcounter">
-      <p><input type="number" name="reputedcounter[licenseno]" value="" placeholder="Enter License No"></p>
-      <p><input type="text" name="reputedcounter[address]" value="" placeholder="Enter Address"></p>
+    <h1>Add Predict Target</h1>
+    <form method="POST" action="/predicttarget">
+      <p><input type="text" name="number" value="" placeholder="Enter predict target"></p>
       <p class="submit"><input type="submit" name="commitreg" value="Register"></p>
     </form>
   </div>
