feat:final commit

--- a/views/champion/addChampion.ejs
+++ b/views/champion/addChampion.ejs
@@ -10,8 +10,8 @@
 
     <h1>Add  TeeChampion</h1>
     <form method="POST" action="/teerchampion">
-      <p><input type="text" name="teerchampion[name]" value="" placeholder="Enter Name"></p>
-      <p><input type="text" name="teerchampion[year]" value="" placeholder="Enter year"></p>
+      <p><input type="text" name="teerchampion[name]" value="" placeholder="Enter Name" required></p>
+      <p><input type="text" name="teerchampion[year]" value="" placeholder="Enter year" required></p>
       <p class="submit"><input type="submit" name="commitreg" value="Add Champion"></p>
     </form>
   </div>
