--- a/views/commonNumber/addRound1.ejs
+++ b/views/commonNumber/addRound1.ejs
@@ -16,7 +16,7 @@
       <p><input type="text" name="round1[Ending]" value="" placeholder="Enter your Ending" required></p>
     
       </p>
-      <p class="submit"><input type="submit" name="commitreg" value="Register"></p>
+      <p class="submit"><input type="submit" name="commitreg" value="Submit"></p>
     </form>
   </div>
 
