--- a/views/commonNumber/addRound2.ejs
+++ b/views/commonNumber/addRound2.ejs
@@ -8,7 +8,7 @@
 <%- include(`../partials/root/header`) %>
 
 <div class="register">
-    <h1>Add Round 1 Common Number</h1>
+    <h1 >Add Round 1 Common Number</h1>
     <form method="post" action="/commonnumberround2">
       <p><input type="date" name="round2[Date]"  placeholder="Enter Date" required></p>
       <p><input type="text" name="round2[Direct]" placeholder="Enter Direct" required></p>
@@ -16,7 +16,7 @@
       <p><input type="text" name="round2[Ending]"  placeholder="Enter your Ending" required></p>
     
       </p>
-      <p class="submit"><input type="submit" name="commitreg" value="Register"></p>
+      <p class="submit"><input type="submit" name="commitreg" value="Submit"></p>
     </form>
   </div>
 
