--- a/views/commonNumber/showCommonNumber.ejs
+++ b/views/commonNumber/showCommonNumber.ejs
@@ -16,7 +16,7 @@
 
     <%if(currentUser){%>
       <%if(currentUser.role.includes('admin')){%>
-         <a href="/commonnumberround1/addround1" type="button" class="btn btn-sm mb-3  btn-dark">Add for Round 1</a>
+         <a href="/commonnumberround1/addround1" type="button" class="btn btn-sm mb-3  btn-dark">Add Common number Round1</a>
       <%}%>
     <%}%>
 
@@ -31,7 +31,7 @@
 
     <%if(currentUser){%>
       <%if(currentUser.role.includes('admin')){%>
-   <th>Action</th>
+   <th class="thbg">Action</th>
       <%}%>
    <%}%>
 
@@ -61,7 +61,7 @@
 
 <%if(currentUser){%>
   <%if(currentUser.role.includes('admin')){%>
-     <a href="/commonnumberround2/addround2" type="button" class="btn btn-sm mb-3  btn-dark">Add for Round 1</a>
+     <a href="/commonnumberround2/addround2" type="button" class="btn btn-sm mb-3  btn-dark ">Add Common number Round1</a>
   <%}%>
 <%}%>
 
@@ -75,7 +75,7 @@
       
           <%if(currentUser){%>
             <%if(currentUser.role.includes('admin')){%>
-         <th>Action</th>
+         <th class="thbg">Action</th>
             <%}%>
          <%}%>
       
