--- a/views/partials/root/elements/projectCard.ejs
+++ b/views/partials/root/elements/projectCard.ejs
@@ -5,17 +5,17 @@
 </a>
 </article>
 <article>
-    <a href="analytics.html">
+    <a href="/teerchampion/analytics">
   <img src="/images/analytics.jpg" alt="Sample photo">
 </a>
 </article>
 <article>
-    <a href="predicttarget.html">
+    <a href="/predicttarget">
   <img src="/images/predictedcounter.jpg" alt="Sample photo">
 </a>
 </article>
 <article>
-    <a href="previousresult.html">
+    <a href="/previousresultpage=1&limit=20">
   <img src="/images/previousresults.jpg" alt="Sample photo">
 </a>
 </article>
