--- a/views/predictTarget/addPredictTarget.ejs
+++ b/views/predictTarget/addPredictTarget.ejs
@@ -10,8 +10,8 @@
 
     <h1>Add Predict Target</h1>
     <form method="POST" action="/predicttarget">
-      <p><input type="text" name="number" value="" placeholder="Enter predict target"></p>
-      <p class="submit"><input type="submit" name="commitreg" value="Register"></p>
+      <p><input type="text" name="number" value="" placeholder="Enter predict target" required></p>
+      <p class="submit"><input type="submit" name="commitreg" value="Submit"></p>
     </form>
   </div>
   
