--- a/views/reputedCounter/addReputedCounter.ejs
+++ b/views/reputedCounter/addReputedCounter.ejs
@@ -10,9 +10,9 @@
 
     <h1>Add  Reputed Counter</h1>
     <form method="POST" action="/reputedcounter">
-      <p><input type="number" name="reputedcounter[licenseno]" value="" placeholder="Enter License No"></p>
-      <p><input type="text" name="reputedcounter[address]" value="" placeholder="Enter Address"></p>
-      <p class="submit"><input type="submit" name="commitreg" value="Register"></p>
+      <p><input type="number" name="reputedcounter[licenseno]" value="" placeholder="Enter License No" required></p>
+      <p><input type="text" name="reputedcounter[address]" value="" placeholder="Enter Address" required></p>
+      <p class="submit"><input type="submit" name="commitreg" value="Add Reputed Counter"></p>
     </form>
   </div>
   
