--- a/views/result/addResult.ejs
+++ b/views/result/addResult.ejs
@@ -9,12 +9,12 @@
 <div class="register">
     <h1>Add  Result</h1>
     <form method="POST" action="/result">
-      <p><input type="text" name="round1time" value="" placeholder="Enter Time for Round 1"></p>
-      <p><input type="text" name="round1result" value="" placeholder="Enter Data for Round 1"></p>
-      <p><input type="text" name="round2time" value="" placeholder="Enter Time for Round 2"></p>
-      <p><input type="text" name="round2result" value="" placeholder="Enter Data for Round 2"></p>
+      <p><input type="text" name="round1time" value="" placeholder="Enter Time for Round 1" required></p>
+      <p><input type="text" name="round1result" value="" placeholder="Enter Data for Round 1" required></p>
+      <p><input type="text" name="round2time" value="" placeholder="Enter Time for Round 2" required></p>
+      <p><input type="text" name="round2result" value="" placeholder="Enter Data for Round 2" required></p>
       </p>
-      <p class="submit"><input type="submit" name="commitreg" value="Register"></p>
+      <p class="submit"><input type="submit" name="commitreg" value="Add Result"></p>
     </form>
   </div>
   
